--- a/a/s2025781117.html
+++ b/a/s2025781117.html
@@ -23,6 +23,13 @@
 		<meta name="citation_lastpage" content="91"/>
 		<meta name="citation_doi" content=""/>
 		<meta name="citation_abstract_html_url" content="https://solav.me/a/s2025781117"/>
+		<meta name="citation_publication_date" content="2025/11/06">
+		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781117.pdf">
+		<meta name="citation_journal_title" content="SOLAV Journal">
+		<meta name="citation_issn" content="">
+		<meta name="citation_doi" content="">
+		<meta name="citation_abstract" content="The global shift toward sustainable energy has increased demand for decentralized, reliable power solutions that integrate renewables. Hybrid renewable energy systems—combining multiple sources with storage—address the intermittency of individual renewables, making them ideal for remote or underserved communities. This study analyzes a hybrid solar-wind-battery system for community-scale electricity. The proposed architecture integrates photovoltaic arrays, wind turbines, and lithium-ion batteries via an intelligent power management unit. Using high-resolution meteorological data and realistic load profiles, we assess performance in energy reliability, economic feasibility, and environmental impact. Hourly simulations over one year show that optimized hybrid systems can achieve over 85% renewable penetration, drastically reducing fossil fuel dependence. Economic analysis, using levelized cost of energy and net present cost metrics, highlights long-term viability, especially with declining technology costs and potential carbon pricing. The findings emphasize the role of integrated renewables as cornerstones of sustainable, community-focused energy infrastructure, advancing both climate goals and energy access.">
+		<meta name="citation_keywords" content="Hybrid Renewable Energy Systems; Solar PV; Wind Energy; Battery Energy Storage; Community Microgrids; Sustainable Energy; Energy Management; Renewable Integration; Decentralized Power Systems">
 		<meta name="citation_keywords" content="Hybrid Renewable Energy Systems"/>
 		<meta name="citation_keywords" content="Solar PV"/>
 		<meta name="citation_keywords" content="Wind Energy"/>
@@ -91,15 +98,6 @@
 		<meta name="DC.Type" content="Text.Serial.Journal"/>
 		<meta name="DC.Date.created" scheme="ISO8601" content="2025-10-03"/>
 		<meta name="DC.Type.articleType" content="Research Article"/>
-		<meta name="citation_author" content="Samara, Daud">
-		<meta name="citation_publication_date" content="2025/11/06">
-		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781117.pdf">
-		<meta name="citation_journal_title" content="SOLAV Journal">
-		<meta name="citation_issn" content="">
-		<meta name="citation_doi" content="">
-		<meta name="citation_abstract" content="The global shift toward sustainable energy has increased demand for decentralized, reliable power solutions that integrate renewables. Hybrid renewable energy systems—combining multiple sources with storage—address the intermittency of individual renewables, making them ideal for remote or underserved communities. This study analyzes a hybrid solar-wind-battery system for community-scale electricity. The proposed architecture integrates photovoltaic arrays, wind turbines, and lithium-ion batteries via an intelligent power management unit. Using high-resolution meteorological data and realistic load profiles, we assess performance in energy reliability, economic feasibility, and environmental impact. Hourly simulations over one year show that optimized hybrid systems can achieve over 85% renewable penetration, drastically reducing fossil fuel dependence. Economic analysis, using levelized cost of energy and net present cost metrics, highlights long-term viability, especially with declining technology costs and potential carbon pricing. The findings emphasize the role of integrated renewables as cornerstones of sustainable, community-focused energy infrastructure, advancing both climate goals and energy access.">
-		<meta name="citation_keywords" content="Hybrid Renewable Energy Systems; Solar PV; Wind Energy; Battery Energy Storage; Community Microgrids; Sustainable Energy; Energy Management; Renewable Integration; Decentralized Power Systems">
-		<meta name="DC.title" content="Design and Performance Evaluation of Hybrid Solar-Wind Energy Systems with Battery Storage for Sustainable Community Power Supply">
 		<meta name="DC.creator" content="Samara, Daud">
 		<meta name="DC.subject" content="Hybrid Renewable Energy Systems; Solar PV; Wind Energy; Battery Energy Storage; Community Microgrids; Sustainable Energy; Energy Management; Renewable Integration; Decentralized Power Systems">
 		<meta name="DC.identifier" content="s2025781117">
@@ -127,40 +125,74 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "ScholarlyArticle",
-			"headline": "Design and Performance Evaluation of Hybrid Solar-Wind Energy Systems with Battery Storage for Sustainable Community Power Supply",
-			"author": {
-				"@type": "Person",
-				"name": "Samara, Daud"
-			},
-			"datePublished": "2025-11-06",
-			"publisher": {
-				"@type": "Organization",
-				"name": "SOLAV Journal"
-			},
-			"sameAs": "https://solav.me/a/s2025781117",
-						"https://doi.org/10.5281/zenodo.18539543"
-		}
-		</script>
-		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "Periodical",
-			"name": "SOLAV Journal",
-			"url": "https://solav.me",
-			"publisher": {
-				"@type": "Organization",
-				"name": "Leothar Company"
-			},
-			"sameAs": [
-				"https://zenodo.org/communities/solav",
-				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
-				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
-			]
-		}
-		</script>
+{
+    "@context": "https://schema.org",
+    "@type": "ScholarlyArticle",
+    "@id": "https://solav.me/a/s2025781117",
+    "headline": "Design and Performance Evaluation of Hybrid Solar-Wind Energy Systems with Battery Storage for Sustainable Community Power Supply",
+    "name": "Design and Performance Evaluation of Hybrid Solar-Wind Energy Systems with Battery Storage for Sustainable Community Power Supply",
+    "url": "https://solav.me/a/s2025781117",
+    "identifier": [
+        {
+            "@type": "PropertyValue",
+            "propertyID": "InternalID",
+            "value": "s2025781117"
+        },
+        {
+            "@type": "PropertyValue",
+            "propertyID": "DOI",
+            "value": "10.5281/zenodo.18539543"
+        }
+    ],
+    "author": [
+        {
+            "@type": "Person",
+            "name": "Samara, Daud",
+            "givenName": "Daud",
+            "familyName": "Samara",
+            "affiliation": {
+                "@type": "Organization",
+                "name": "Independent Researcher"
+            },
+            "sameAs": "https://orcid.org/0009-0001-4389-3043"
+        }
+    ],
+    "publisher": {
+        "@type": "Organization",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me"
+    },
+    "isPartOf": {
+        "@type": "Periodical",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me",
+        "issn": ""
+    },
+    "dateReceived": "2025-10-03",
+    "dateAccepted": "2025-10-30",
+    "datePublished": "2025-11-06",
+    "volumeNumber": "1",
+    "issueNumber": "",
+    "pagination": "74-91",
+    "inLanguage": "en",
+    "articleSection": "Research Article",
+    "abstract": "The global shift toward sustainable energy has increased demand for decentralized, reliable power solutions that integrate renewables. Hybrid renewable energy systems—combining multiple sources with storage—address the intermittency of individual renewables, making them ideal for remote or underserved communities. This study analyzes a hybrid solar-wind-battery system for community-scale electricity. The proposed architecture integrates photovoltaic arrays, wind turbines, and lithium-ion batteries via an intelligent power management unit. Using high-resolution meteorological data and realistic load profiles, we assess performance in energy reliability, economic feasibility, and environmental impact. Hourly simulations over one year show that optimized hybrid systems can achieve over 85% renewable penetration, drastically reducing fossil fuel dependence. Economic analysis, using levelized cost of energy and net present cost metrics, highlights long-term viability, especially with declining technology costs and potential carbon pricing. The findings emphasize the role of integrated renewables as cornerstones of sustainable, community-focused energy infrastructure, advancing both climate goals and energy access.",
+    "keywords": [
+        "Hybrid Renewable Energy Systems",
+        "Solar PV",
+        "Wind Energy",
+        "Battery Energy Storage",
+        "Community Microgrids",
+        "Sustainable Energy",
+        "Energy Management",
+        "Renewable Integration",
+        "Decentralized Power Systems"
+    ],
+    "license": "CC BY 4.0",
+    "sameAs": [
+        "https://doi.org/10.5281/zenodo.18539543"
+    ]
+}		</script>
 	</head>
 	<body>
 		<main class="page-wrapper">
@@ -204,7 +236,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item"><span class="text-primary p-0 m-0 ps-2">●</span> Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -461,7 +493,7 @@
 						</div>
 					</div>
 					<div class="modal-footer border-0 justify-content-center pb-4">
-						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Journal for Interdisciplinary Applied Research</span>
+						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Scholarly Repository</span>
 					</div>
 				</div>
 			</div>
