--- a/a/s2025781101.html
+++ b/a/s2025781101.html
@@ -23,6 +23,13 @@
 		<meta name="citation_lastpage" content="2"/>
 		<meta name="citation_doi" content=""/>
 		<meta name="citation_abstract_html_url" content="https://solav.me/a/s2025781101"/>
+		<meta name="citation_publication_date" content="2025/02/02">
+		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781101.pdf">
+		<meta name="citation_journal_title" content="SOLAV Journal">
+		<meta name="citation_issn" content="">
+		<meta name="citation_doi" content="">
+		<meta name="citation_abstract" content="This editorial marks the launch of SOLAV Journal, an open-access, digital-first scholarly publication operating under a continuous publication model. The article outlines the journal’s vision to reduce barriers to knowledge by establishing a rigorous, inclusive, and ethically grounded platform for the dissemination of high-quality research. It introduces the journal’s scope and fundamental principles, emphasizing academic integrity, transparent peer review, and global accessibility. The editorial situates SOLAV Journal within the evolving landscape of contemporary scholarly communication and affirms its commitment to fostering a shared scholarly common that accelerates discovery and democratizes academic discourse.">
+		<meta name="citation_keywords" content="Editorial; Open Access; Continuous Publication; Scholarly Publishing; Academic Integrity">
 		<meta name="citation_keywords" content="Editorial"/>
 		<meta name="citation_keywords" content="Open Access"/>
 		<meta name="citation_keywords" content="Continuous Publication"/>
@@ -58,15 +65,6 @@
 		<meta name="DC.Type" content="Text.Serial.Journal"/>
 		<meta name="DC.Date.created" scheme="ISO8601" content="2025-02-01"/>
 		<meta name="DC.Type.articleType" content="Editorial"/>
-		<meta name="citation_author" content="Baker, Maher Asaad">
-		<meta name="citation_publication_date" content="2025/02/02">
-		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781101.pdf">
-		<meta name="citation_journal_title" content="SOLAV Journal">
-		<meta name="citation_issn" content="">
-		<meta name="citation_doi" content="">
-		<meta name="citation_abstract" content="This editorial marks the launch of SOLAV Journal, an open-access, digital-first scholarly publication operating under a continuous publication model. The article outlines the journal’s vision to reduce barriers to knowledge by establishing a rigorous, inclusive, and ethically grounded platform for the dissemination of high-quality research. It introduces the journal’s scope and fundamental principles, emphasizing academic integrity, transparent peer review, and global accessibility. The editorial situates SOLAV Journal within the evolving landscape of contemporary scholarly communication and affirms its commitment to fostering a shared scholarly common that accelerates discovery and democratizes academic discourse.">
-		<meta name="citation_keywords" content="Editorial; Open Access; Continuous Publication; Scholarly Publishing; Academic Integrity">
-		<meta name="DC.title" content="Launching SOLAV Journal: Vision, Scope, and Commitment to Scholarly Excellence">
 		<meta name="DC.creator" content="Baker, Maher Asaad">
 		<meta name="DC.subject" content="Editorial; Open Access; Continuous Publication; Scholarly Publishing; Academic Integrity">
 		<meta name="DC.identifier" content="s2025781101">
@@ -94,40 +92,70 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "ScholarlyArticle",
-			"headline": "Launching SOLAV Journal: Vision, Scope, and Commitment to Scholarly Excellence",
-			"author": {
-				"@type": "Person",
-				"name": "Baker, Maher Asaad"
-			},
-			"datePublished": "2025-02-02",
-			"publisher": {
-				"@type": "Organization",
-				"name": "SOLAV Journal"
-			},
-			"sameAs": "https://solav.me/a/s2025781101",
-						"https://doi.org/10.5281/zenodo.18573657"
-		}
-		</script>
-		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "Periodical",
-			"name": "SOLAV Journal",
-			"url": "https://solav.me",
-			"publisher": {
-				"@type": "Organization",
-				"name": "Leothar Company"
-			},
-			"sameAs": [
-				"https://zenodo.org/communities/solav",
-				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
-				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
-			]
-		}
-		</script>
+{
+    "@context": "https://schema.org",
+    "@type": "ScholarlyArticle",
+    "@id": "https://solav.me/a/s2025781101",
+    "headline": "Launching SOLAV Journal: Vision, Scope, and Commitment to Scholarly Excellence",
+    "name": "Launching SOLAV Journal: Vision, Scope, and Commitment to Scholarly Excellence",
+    "url": "https://solav.me/a/s2025781101",
+    "identifier": [
+        {
+            "@type": "PropertyValue",
+            "propertyID": "InternalID",
+            "value": "s2025781101"
+        },
+        {
+            "@type": "PropertyValue",
+            "propertyID": "DOI",
+            "value": "10.5281/zenodo.18573657"
+        }
+    ],
+    "author": [
+        {
+            "@type": "Person",
+            "name": "Baker, Maher Asaad",
+            "givenName": "Maher Asaad",
+            "familyName": "Baker",
+            "affiliation": {
+                "@type": "Organization",
+                "name": "SOLAV, Riyadh, Saudi Arabia"
+            },
+            "sameAs": "https://orcid.org/0000-0001-8013-6044"
+        }
+    ],
+    "publisher": {
+        "@type": "Organization",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me"
+    },
+    "isPartOf": {
+        "@type": "Periodical",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me",
+        "issn": ""
+    },
+    "dateReceived": "2025-02-01",
+    "dateAccepted": "2025-02-01",
+    "datePublished": "2025-02-02",
+    "volumeNumber": "1",
+    "issueNumber": "",
+    "pagination": "1-2",
+    "inLanguage": "en",
+    "articleSection": "Editorial",
+    "abstract": "This editorial marks the launch of SOLAV Journal, an open-access, digital-first scholarly publication operating under a continuous publication model. The article outlines the journal’s vision to reduce barriers to knowledge by establishing a rigorous, inclusive, and ethically grounded platform for the dissemination of high-quality research. It introduces the journal’s scope and fundamental principles, emphasizing academic integrity, transparent peer review, and global accessibility. The editorial situates SOLAV Journal within the evolving landscape of contemporary scholarly communication and affirms its commitment to fostering a shared scholarly common that accelerates discovery and democratizes academic discourse.",
+    "keywords": [
+        "Editorial",
+        "Open Access",
+        "Continuous Publication",
+        "Scholarly Publishing",
+        "Academic Integrity"
+    ],
+    "license": "CC BY 4.0",
+    "sameAs": [
+        "https://doi.org/10.5281/zenodo.18573657"
+    ]
+}		</script>
 	</head>
 	<body>
 		<main class="page-wrapper">
@@ -171,7 +199,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item"><span class="text-primary p-0 m-0 ps-2">●</span> Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -248,7 +276,6 @@
 									<a href="#dcds" class="btn-sm py-1 btn btn-outline-primary fs-sm text-decoration-none"><i class="bi bi-info-circle"></i></a>
 								</div>
 							</div>
-
 						</div>
 						
 						<h1 class="mb-4 h3">Launching SOLAV Journal: Vision, Scope, and Commitment to Scholarly Excellence</h1>
@@ -343,7 +370,6 @@
 										<li>
 											<i class="bi bi-c-circle text-primary me-2"></i><strong>License:</strong> This work is licensed under a <a rel="license" target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International (CC BY 4.0)</a>.
 										</li>
-										
 									</ul>
 								</div>
 							</div>
@@ -365,7 +391,6 @@
 					<span class="ms-1"><i class="bi bi-box-arrow-up-right text-xs"></i></span>
 				</a>
 			</div>
-
 		</main>
 		<div class="modal fade" id="gsearchModal" tabindex="-1" aria-hidden="true">
 			<div class="modal-dialog modal-lg modal-dialog-centered">
@@ -427,7 +452,7 @@
 						</div>
 					</div>
 					<div class="modal-footer border-0 justify-content-center pb-4">
-						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Journal for Interdisciplinary Applied Research</span>
+						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Scholarly Repository</span>
 					</div>
 				</div>
 			</div>
