--- a/a/s2025781102.html
+++ b/a/s2025781102.html
@@ -23,6 +23,13 @@
 		<meta name="citation_lastpage" content="6"/>
 		<meta name="citation_doi" content=""/>
 		<meta name="citation_abstract_html_url" content="https://solav.me/a/s2025781102"/>
+		<meta name="citation_publication_date" content="2025/02/04">
+		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781102.pdf">
+		<meta name="citation_journal_title" content="SOLAV Journal">
+		<meta name="citation_issn" content="">
+		<meta name="citation_doi" content="">
+		<meta name="citation_abstract" content="This document defines the editorial policies, peer review framework, and ethical standards that govern the operations of SOLAV Journal. It outlines our commitment to transparent governance, equitable evaluation, and rigorous scholarly publishing. By clearly articulating our principles of editorial independence, double blind peer review, and adherence to internationally recognized publication ethics, we aim to build trust, ensure accountability, and safeguard research integrity. These policies reflect our dedication to open science and to contributing responsibly to a sustainable and ethical global research ecosystem.">
+		<meta name="citation_keywords" content="Editorial Governance; Double Blind Peer Review; Research Integrity; Publication Ethics; Open Access Policy; Scholarly Accountability">
 		<meta name="citation_keywords" content="Editorial Governance"/>
 		<meta name="citation_keywords" content="Double Blind Peer Review"/>
 		<meta name="citation_keywords" content="Research Integrity"/>
@@ -60,15 +67,6 @@
 		<meta name="DC.Type" content="Text.Serial.Journal"/>
 		<meta name="DC.Date.created" scheme="ISO8601" content="2025-02-01"/>
 		<meta name="DC.Type.articleType" content="Editorial"/>
-		<meta name="citation_author" content="Baker, Maher Asaad">
-		<meta name="citation_publication_date" content="2025/02/04">
-		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781102.pdf">
-		<meta name="citation_journal_title" content="SOLAV Journal">
-		<meta name="citation_issn" content="">
-		<meta name="citation_doi" content="">
-		<meta name="citation_abstract" content="This document defines the editorial policies, peer review framework, and ethical standards that govern the operations of SOLAV Journal. It outlines our commitment to transparent governance, equitable evaluation, and rigorous scholarly publishing. By clearly articulating our principles of editorial independence, double blind peer review, and adherence to internationally recognized publication ethics, we aim to build trust, ensure accountability, and safeguard research integrity. These policies reflect our dedication to open science and to contributing responsibly to a sustainable and ethical global research ecosystem.">
-		<meta name="citation_keywords" content="Editorial Governance; Double Blind Peer Review; Research Integrity; Publication Ethics; Open Access Policy; Scholarly Accountability">
-		<meta name="DC.title" content="Editorial Policies, Peer Review, and Ethical Standards of SOLAV Journal">
 		<meta name="DC.creator" content="Baker, Maher Asaad">
 		<meta name="DC.subject" content="Editorial Governance; Double Blind Peer Review; Research Integrity; Publication Ethics; Open Access Policy; Scholarly Accountability">
 		<meta name="DC.identifier" content="s2025781102">
@@ -96,40 +94,71 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "ScholarlyArticle",
-			"headline": "Editorial Policies, Peer Review, and Ethical Standards of SOLAV Journal",
-			"author": {
-				"@type": "Person",
-				"name": "Baker, Maher Asaad"
-			},
-			"datePublished": "2025-02-04",
-			"publisher": {
-				"@type": "Organization",
-				"name": "SOLAV Journal"
-			},
-			"sameAs": "https://solav.me/a/s2025781102",
-						"https://doi.org/10.5281/zenodo.18538363"
-		}
-		</script>
-		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "Periodical",
-			"name": "SOLAV Journal",
-			"url": "https://solav.me",
-			"publisher": {
-				"@type": "Organization",
-				"name": "Leothar Company"
-			},
-			"sameAs": [
-				"https://zenodo.org/communities/solav",
-				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
-				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
-			]
-		}
-		</script>
+{
+    "@context": "https://schema.org",
+    "@type": "ScholarlyArticle",
+    "@id": "https://solav.me/a/s2025781102",
+    "headline": "Editorial Policies, Peer Review, and Ethical Standards of SOLAV Journal",
+    "name": "Editorial Policies, Peer Review, and Ethical Standards of SOLAV Journal",
+    "url": "https://solav.me/a/s2025781102",
+    "identifier": [
+        {
+            "@type": "PropertyValue",
+            "propertyID": "InternalID",
+            "value": "s2025781102"
+        },
+        {
+            "@type": "PropertyValue",
+            "propertyID": "DOI",
+            "value": "10.5281/zenodo.18538363"
+        }
+    ],
+    "author": [
+        {
+            "@type": "Person",
+            "name": "Baker, Maher Asaad",
+            "givenName": "Maher Asaad",
+            "familyName": "Baker",
+            "affiliation": {
+                "@type": "Organization",
+                "name": "SOLAV, Riyadh, Saudi Arabia"
+            },
+            "sameAs": "https://orcid.org/0000-0001-8013-6044"
+        }
+    ],
+    "publisher": {
+        "@type": "Organization",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me"
+    },
+    "isPartOf": {
+        "@type": "Periodical",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me",
+        "issn": ""
+    },
+    "dateReceived": "2025-02-01",
+    "dateAccepted": "2025-02-04",
+    "datePublished": "2025-02-04",
+    "volumeNumber": "1",
+    "issueNumber": "",
+    "pagination": "3-6",
+    "inLanguage": "en",
+    "articleSection": "Editorial",
+    "abstract": "This document defines the editorial policies, peer review framework, and ethical standards that govern the operations of SOLAV Journal. It outlines our commitment to transparent governance, equitable evaluation, and rigorous scholarly publishing. By clearly articulating our principles of editorial independence, double blind peer review, and adherence to internationally recognized publication ethics, we aim to build trust, ensure accountability, and safeguard research integrity. These policies reflect our dedication to open science and to contributing responsibly to a sustainable and ethical global research ecosystem.",
+    "keywords": [
+        "Editorial Governance",
+        "Double Blind Peer Review",
+        "Research Integrity",
+        "Publication Ethics",
+        "Open Access Policy",
+        "Scholarly Accountability"
+    ],
+    "license": "CC BY 4.0",
+    "sameAs": [
+        "https://doi.org/10.5281/zenodo.18538363"
+    ]
+}		</script>
 	</head>
 	<body>
 		<main class="page-wrapper">
@@ -173,7 +202,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item"><span class="text-primary p-0 m-0 ps-2">●</span> Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -427,7 +456,7 @@
 						</div>
 					</div>
 					<div class="modal-footer border-0 justify-content-center pb-4">
-						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Journal for Interdisciplinary Applied Research</span>
+						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Scholarly Repository</span>
 					</div>
 				</div>
 			</div>
