--- a/a/s2025781107.html
+++ b/a/s2025781107.html
@@ -23,6 +23,13 @@
 		<meta name="citation_lastpage" content="16"/>
 		<meta name="citation_doi" content=""/>
 		<meta name="citation_abstract_html_url" content="https://solav.me/a/s2025781107"/>
+		<meta name="citation_publication_date" content="2025/06/06">
+		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781107.pdf">
+		<meta name="citation_journal_title" content="SOLAV Journal">
+		<meta name="citation_issn" content="">
+		<meta name="citation_doi" content="">
+		<meta name="citation_abstract" content="The digital paradigm in scholarly publishing has precipitated a shift from rigid, issue, based models toward dynamic, article, based workflows. This study provides a comprehensive analysis of the continuous publication model, a system where manuscripts are published individually upon final acceptance, decoupling dissemination from the assembly of static journal issues. Through a qualitative synthesis of publishing policies, scholarly literature, and case studies, this paper elucidates the model&#039;s conceptual underpinnings, its tangible benefits in accelerating research dissemination and enhancing accessibility, and the concomitant editorial, ethical, and infrastructural complexities. We identify critical challenges including metadata integrity, version control, archival permanence, and citation consistency. In response, this article makes a novel contribution by proposing the TAP (Temporal, Administrative, Perceptual) Framework for evaluating publication models and outlining a “Multi, Layer Archival” strategy for digital preservation. The findings offer a critical, practical guide for editors, publishers, and scholarly communications specialists seeking to implement or optimize continuous publication, with particular relevance for emerging open, access journals navigating the evolving topology of academic publishing.">
+		<meta name="citation_keywords" content="Continuous Publication; Online Journals; Scholarly Communication; Editorial Workflow; Open Access; Digital Preservation; Publishing Models; Academic Metadata">
 		<meta name="citation_keywords" content="Continuous Publication"/>
 		<meta name="citation_keywords" content="Online Journals"/>
 		<meta name="citation_keywords" content="Scholarly Communication"/>
@@ -98,15 +105,6 @@
 		<meta name="DC.Type" content="Text.Serial.Journal"/>
 		<meta name="DC.Date.created" scheme="ISO8601" content="2025-04-17"/>
 		<meta name="DC.Type.articleType" content="Research Article"/>
-		<meta name="citation_author" content="Rizq, Khalil">
-		<meta name="citation_publication_date" content="2025/06/06">
-		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781107.pdf">
-		<meta name="citation_journal_title" content="SOLAV Journal">
-		<meta name="citation_issn" content="">
-		<meta name="citation_doi" content="">
-		<meta name="citation_abstract" content="The digital paradigm in scholarly publishing has precipitated a shift from rigid, issue, based models toward dynamic, article, based workflows. This study provides a comprehensive analysis of the continuous publication model, a system where manuscripts are published individually upon final acceptance, decoupling dissemination from the assembly of static journal issues. Through a qualitative synthesis of publishing policies, scholarly literature, and case studies, this paper elucidates the model&#039;s conceptual underpinnings, its tangible benefits in accelerating research dissemination and enhancing accessibility, and the concomitant editorial, ethical, and infrastructural complexities. We identify critical challenges including metadata integrity, version control, archival permanence, and citation consistency. In response, this article makes a novel contribution by proposing the TAP (Temporal, Administrative, Perceptual) Framework for evaluating publication models and outlining a “Multi, Layer Archival” strategy for digital preservation. The findings offer a critical, practical guide for editors, publishers, and scholarly communications specialists seeking to implement or optimize continuous publication, with particular relevance for emerging open, access journals navigating the evolving topology of academic publishing.">
-		<meta name="citation_keywords" content="Continuous Publication; Online Journals; Scholarly Communication; Editorial Workflow; Open Access; Digital Preservation; Publishing Models; Academic Metadata">
-		<meta name="DC.title" content="Continuous Publication in Online Scholarly Journals: Opportunities, Challenges, and Editorial Implications">
 		<meta name="DC.creator" content="Rizq, Khalil">
 		<meta name="DC.subject" content="Continuous Publication; Online Journals; Scholarly Communication; Editorial Workflow; Open Access; Digital Preservation; Publishing Models; Academic Metadata">
 		<meta name="DC.identifier" content="s2025781107">
@@ -134,40 +132,73 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "ScholarlyArticle",
-			"headline": "Continuous Publication in Online Scholarly Journals: Opportunities, Challenges, and Editorial Implications",
-			"author": {
-				"@type": "Person",
-				"name": "Rizq, Khalil"
-			},
-			"datePublished": "2025-06-06",
-			"publisher": {
-				"@type": "Organization",
-				"name": "SOLAV Journal"
-			},
-			"sameAs": "https://solav.me/a/s2025781107",
-						"https://doi.org/10.5281/zenodo.18538479"
-		}
-		</script>
-		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "Periodical",
-			"name": "SOLAV Journal",
-			"url": "https://solav.me",
-			"publisher": {
-				"@type": "Organization",
-				"name": "Leothar Company"
-			},
-			"sameAs": [
-				"https://zenodo.org/communities/solav",
-				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
-				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
-			]
-		}
-		</script>
+{
+    "@context": "https://schema.org",
+    "@type": "ScholarlyArticle",
+    "@id": "https://solav.me/a/s2025781107",
+    "headline": "Continuous Publication in Online Scholarly Journals: Opportunities, Challenges, and Editorial Implications",
+    "name": "Continuous Publication in Online Scholarly Journals: Opportunities, Challenges, and Editorial Implications",
+    "url": "https://solav.me/a/s2025781107",
+    "identifier": [
+        {
+            "@type": "PropertyValue",
+            "propertyID": "InternalID",
+            "value": "s2025781107"
+        },
+        {
+            "@type": "PropertyValue",
+            "propertyID": "DOI",
+            "value": "10.5281/zenodo.18538479"
+        }
+    ],
+    "author": [
+        {
+            "@type": "Person",
+            "name": "Rizq, Khalil",
+            "givenName": "Rizq",
+            "familyName": "Khalil",
+            "affiliation": {
+                "@type": "Organization",
+                "name": "Independent Researcher, Scholarly Communication Studies"
+            },
+            "sameAs": "https://orcid.org/0000-0001-5145-7789"
+        }
+    ],
+    "publisher": {
+        "@type": "Organization",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me"
+    },
+    "isPartOf": {
+        "@type": "Periodical",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me",
+        "issn": ""
+    },
+    "dateReceived": "2025-04-17",
+    "dateAccepted": "2025-05-29",
+    "datePublished": "2025-06-06",
+    "volumeNumber": "1",
+    "issueNumber": "",
+    "pagination": "7-16",
+    "inLanguage": "en",
+    "articleSection": "Research Article",
+    "abstract": "The digital paradigm in scholarly publishing has precipitated a shift from rigid, issue, based models toward dynamic, article, based workflows. This study provides a comprehensive analysis of the continuous publication model, a system where manuscripts are published individually upon final acceptance, decoupling dissemination from the assembly of static journal issues. Through a qualitative synthesis of publishing policies, scholarly literature, and case studies, this paper elucidates the model's conceptual underpinnings, its tangible benefits in accelerating research dissemination and enhancing accessibility, and the concomitant editorial, ethical, and infrastructural complexities. We identify critical challenges including metadata integrity, version control, archival permanence, and citation consistency. In response, this article makes a novel contribution by proposing the TAP (Temporal, Administrative, Perceptual) Framework for evaluating publication models and outlining a “Multi, Layer Archival” strategy for digital preservation. The findings offer a critical, practical guide for editors, publishers, and scholarly communications specialists seeking to implement or optimize continuous publication, with particular relevance for emerging open, access journals navigating the evolving topology of academic publishing.",
+    "keywords": [
+        "Continuous Publication",
+        "Online Journals",
+        "Scholarly Communication",
+        "Editorial Workflow",
+        "Open Access",
+        "Digital Preservation",
+        "Publishing Models",
+        "Academic Metadata"
+    ],
+    "license": "CC BY 4.0",
+    "sameAs": [
+        "https://doi.org/10.5281/zenodo.18538479"
+    ]
+}		</script>
 	</head>
 	<body>
 		<main class="page-wrapper">
@@ -211,7 +242,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item"><span class="text-primary p-0 m-0 ps-2">●</span> Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -467,7 +498,7 @@
 						</div>
 					</div>
 					<div class="modal-footer border-0 justify-content-center pb-4">
-						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Journal for Interdisciplinary Applied Research</span>
+						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Scholarly Repository</span>
 					</div>
 				</div>
 			</div>
