--- a/a/s2025781116.html
+++ b/a/s2025781116.html
@@ -23,6 +23,13 @@
 		<meta name="citation_lastpage" content="73"/>
 		<meta name="citation_doi" content=""/>
 		<meta name="citation_abstract_html_url" content="https://solav.me/a/s2025781116"/>
+		<meta name="citation_publication_date" content="2025/08/10">
+		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781116.pdf">
+		<meta name="citation_journal_title" content="SOLAV Journal">
+		<meta name="citation_issn" content="">
+		<meta name="citation_doi" content="">
+		<meta name="citation_abstract" content="The widespread integration of machine learning systems into high-impact domains, including healthcare diagnostics, financial risk assessment, and judicial decision support, has escalated concerns regarding transparency, accountability, and societal trust. While complex, high-performance models often operate as &quot;black boxes,&quot; their opacity poses significant ethical, legal, and operational challenges, particularly when automated decisions directly affect human welfare. This study proposes a comprehensive, three-tiered conceptual and applied framework for Explainable Artificial Intelligence (XAI) that systematically integrates intrinsic model transparency, post-hoc interpretability, and human-centered explanation design. We critically examine prevailing XAI methodologies, delineate their theoretical foundations and practical limitations, and introduce a structured, context-sensitive methodology for deploying interpretable machine learning in real-world systems. Through applied case studies in clinical risk prediction and credit scoring, we demonstrate that carefully designed explainability mechanisms can substantially enhance user trust, facilitate regulatory compliance, and improve decision quality without necessitating a significant compromise in predictive accuracy. Our findings underscore the critical importance of contextualized, stakeholder-specific explanations and advocate for interdisciplinary collaboration as a cornerstone for the responsible development and deployment of artificial intelligence.">
+		<meta name="citation_keywords" content="Explainable Artificial Intelligence (XAI); Interpretable Machine Learning; Algorithmic Accountability; Model Transparency; Human-Centered AI; Ethical AI; Post-Hoc Explanation; SHAP; LIME; Responsible Innovation">
 		<meta name="citation_keywords" content="Explainable Artificial Intelligence (XAI)"/>
 		<meta name="citation_keywords" content="Interpretable Machine Learning"/>
 		<meta name="citation_keywords" content="Algorithmic Accountability"/>
@@ -95,15 +102,6 @@
 		<meta name="DC.Type" content="Text.Serial.Journal"/>
 		<meta name="DC.Date.created" scheme="ISO8601" content="2025-06-27"/>
 		<meta name="DC.Type.articleType" content="Research Article"/>
-		<meta name="citation_author" content="Baker, Derar Yahya">
-		<meta name="citation_publication_date" content="2025/08/10">
-		<meta name="citation_pdf_url" content="https://solav.me/p/s2025781116.pdf">
-		<meta name="citation_journal_title" content="SOLAV Journal">
-		<meta name="citation_issn" content="">
-		<meta name="citation_doi" content="">
-		<meta name="citation_abstract" content="The widespread integration of machine learning systems into high-impact domains, including healthcare diagnostics, financial risk assessment, and judicial decision support, has escalated concerns regarding transparency, accountability, and societal trust. While complex, high-performance models often operate as &quot;black boxes,&quot; their opacity poses significant ethical, legal, and operational challenges, particularly when automated decisions directly affect human welfare. This study proposes a comprehensive, three-tiered conceptual and applied framework for Explainable Artificial Intelligence (XAI) that systematically integrates intrinsic model transparency, post-hoc interpretability, and human-centered explanation design. We critically examine prevailing XAI methodologies, delineate their theoretical foundations and practical limitations, and introduce a structured, context-sensitive methodology for deploying interpretable machine learning in real-world systems. Through applied case studies in clinical risk prediction and credit scoring, we demonstrate that carefully designed explainability mechanisms can substantially enhance user trust, facilitate regulatory compliance, and improve decision quality without necessitating a significant compromise in predictive accuracy. Our findings underscore the critical importance of contextualized, stakeholder-specific explanations and advocate for interdisciplinary collaboration as a cornerstone for the responsible development and deployment of artificial intelligence.">
-		<meta name="citation_keywords" content="Explainable Artificial Intelligence (XAI); Interpretable Machine Learning; Algorithmic Accountability; Model Transparency; Human-Centered AI; Ethical AI; Post-Hoc Explanation; SHAP; LIME; Responsible Innovation">
-		<meta name="DC.title" content="Interpretable Machine Learning for Transparent Decision-Making: A Conceptual and Applied Framework for Explainable Artificial Intelligence">
 		<meta name="DC.creator" content="Baker, Derar Yahya">
 		<meta name="DC.subject" content="Explainable Artificial Intelligence (XAI); Interpretable Machine Learning; Algorithmic Accountability; Model Transparency; Human-Centered AI; Ethical AI; Post-Hoc Explanation; SHAP; LIME; Responsible Innovation">
 		<meta name="DC.identifier" content="s2025781116">
@@ -131,40 +129,75 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "ScholarlyArticle",
-			"headline": "Interpretable Machine Learning for Transparent Decision-Making: A Conceptual and Applied Framework for Explainable Artificial Intelligence",
-			"author": {
-				"@type": "Person",
-				"name": "Baker, Derar Yahya"
-			},
-			"datePublished": "2025-08-10",
-			"publisher": {
-				"@type": "Organization",
-				"name": "SOLAV Journal"
-			},
-			"sameAs": "https://solav.me/a/s2025781116",
-						"https://doi.org/10.5281/zenodo.18539073"
-		}
-		</script>
-		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "Periodical",
-			"name": "SOLAV Journal",
-			"url": "https://solav.me",
-			"publisher": {
-				"@type": "Organization",
-				"name": "Leothar Company"
-			},
-			"sameAs": [
-				"https://zenodo.org/communities/solav",
-				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
-				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
-			]
-		}
-		</script>
+{
+    "@context": "https://schema.org",
+    "@type": "ScholarlyArticle",
+    "@id": "https://solav.me/a/s2025781116",
+    "headline": "Interpretable Machine Learning for Transparent Decision-Making: A Conceptual and Applied Framework for Explainable Artificial Intelligence",
+    "name": "Interpretable Machine Learning for Transparent Decision-Making: A Conceptual and Applied Framework for Explainable Artificial Intelligence",
+    "url": "https://solav.me/a/s2025781116",
+    "identifier": [
+        {
+            "@type": "PropertyValue",
+            "propertyID": "InternalID",
+            "value": "s2025781116"
+        },
+        {
+            "@type": "PropertyValue",
+            "propertyID": "DOI",
+            "value": "10.5281/zenodo.18539073"
+        }
+    ],
+    "author": [
+        {
+            "@type": "Person",
+            "name": "Baker, Derar Yahya",
+            "givenName": "Derar Yahya",
+            "familyName": "Baker",
+            "affiliation": {
+                "@type": "Organization",
+                "name": "Independent Researcher"
+            },
+            "sameAs": "https://orcid.org/0000-0002-6197-9967"
+        }
+    ],
+    "publisher": {
+        "@type": "Organization",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me"
+    },
+    "isPartOf": {
+        "@type": "Periodical",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me",
+        "issn": ""
+    },
+    "dateReceived": "2025-06-27",
+    "dateAccepted": "2025-08-08",
+    "datePublished": "2025-08-10",
+    "volumeNumber": "1",
+    "issueNumber": "",
+    "pagination": "54-73",
+    "inLanguage": "en",
+    "articleSection": "Research Article",
+    "abstract": "The widespread integration of machine learning systems into high-impact domains, including healthcare diagnostics, financial risk assessment, and judicial decision support, has escalated concerns regarding transparency, accountability, and societal trust. While complex, high-performance models often operate as \"black boxes,\" their opacity poses significant ethical, legal, and operational challenges, particularly when automated decisions directly affect human welfare. This study proposes a comprehensive, three-tiered conceptual and applied framework for Explainable Artificial Intelligence (XAI) that systematically integrates intrinsic model transparency, post-hoc interpretability, and human-centered explanation design. We critically examine prevailing XAI methodologies, delineate their theoretical foundations and practical limitations, and introduce a structured, context-sensitive methodology for deploying interpretable machine learning in real-world systems. Through applied case studies in clinical risk prediction and credit scoring, we demonstrate that carefully designed explainability mechanisms can substantially enhance user trust, facilitate regulatory compliance, and improve decision quality without necessitating a significant compromise in predictive accuracy. Our findings underscore the critical importance of contextualized, stakeholder-specific explanations and advocate for interdisciplinary collaboration as a cornerstone for the responsible development and deployment of artificial intelligence.",
+    "keywords": [
+        "Explainable Artificial Intelligence (XAI)",
+        "Interpretable Machine Learning",
+        "Algorithmic Accountability",
+        "Model Transparency",
+        "Human-Centered AI",
+        "Ethical AI",
+        "Post-Hoc Explanation",
+        "SHAP",
+        "LIME",
+        "Responsible Innovation"
+    ],
+    "license": "CC BY 4.0",
+    "sameAs": [
+        "https://doi.org/10.5281/zenodo.18539073"
+    ]
+}		</script>
 	</head>
 	<body>
 		<main class="page-wrapper">
@@ -208,7 +241,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item"><span class="text-primary p-0 m-0 ps-2">●</span> Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -466,7 +499,7 @@
 						</div>
 					</div>
 					<div class="modal-footer border-0 justify-content-center pb-4">
-						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Journal for Interdisciplinary Applied Research</span>
+						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Scholarly Repository</span>
 					</div>
 				</div>
 			</div>
