--- a/a/s2026781201.html
+++ b/a/s2026781201.html
@@ -23,6 +23,13 @@
 		<meta name="citation_lastpage" content="6"/>
 		<meta name="citation_doi" content=""/>
 		<meta name="citation_abstract_html_url" content="https://solav.me/a/s2026781201"/>
+		<meta name="citation_publication_date" content="2026/02/08">
+		<meta name="citation_pdf_url" content="https://solav.me/p/s2026781201.pdf">
+		<meta name="citation_journal_title" content="SOLAV Journal">
+		<meta name="citation_issn" content="">
+		<meta name="citation_doi" content="">
+		<meta name="citation_abstract" content="This editorial reflects on the achievements and lessons of SOLAV Journal’s inaugural volume and outlines the journal’s strategic priorities for 2026. It reaffirms the journal’s commitment to open access, rigorous peer review, and ethical publishing, and formally invites original scholarly contributions for Volume Two. Through this call for papers, the journal seeks to strengthen its role as a collaborative platform for innovative, socially relevant, and methodologically sound research.">
+		<meta name="citation_keywords" content="Scholarly Publishing; Open Access; Continuous Publication; Peer Review; Research Integrity; Interdisciplinary Research; Academic Communication; Call for Papers">
 		<meta name="citation_keywords" content="Scholarly Publishing"/>
 		<meta name="citation_keywords" content="Open Access"/>
 		<meta name="citation_keywords" content="Continuous Publication"/>
@@ -64,15 +71,6 @@
 		<meta name="DC.Type" content="Text.Serial.Journal"/>
 		<meta name="DC.Date.created" scheme="ISO8601" content="2026-01-19"/>
 		<meta name="DC.Type.articleType" content="Editorial"/>
-		<meta name="citation_author" content="Baker, Maher Asaad">
-		<meta name="citation_publication_date" content="2026/02/08">
-		<meta name="citation_pdf_url" content="https://solav.me/p/s2026781201.pdf">
-		<meta name="citation_journal_title" content="SOLAV Journal">
-		<meta name="citation_issn" content="">
-		<meta name="citation_doi" content="">
-		<meta name="citation_abstract" content="This editorial reflects on the achievements and lessons of SOLAV Journal’s inaugural volume and outlines the journal’s strategic priorities for 2026. It reaffirms the journal’s commitment to open access, rigorous peer review, and ethical publishing, and formally invites original scholarly contributions for Volume Two. Through this call for papers, the journal seeks to strengthen its role as a collaborative platform for innovative, socially relevant, and methodologically sound research.">
-		<meta name="citation_keywords" content="Scholarly Publishing; Open Access; Continuous Publication; Peer Review; Research Integrity; Interdisciplinary Research; Academic Communication; Call for Papers">
-		<meta name="DC.title" content="Advancing Open, Ethical, and Interdisciplinary Scholarship: Reflections on Volume One and a Call for Contributions to Volume Two (2026)">
 		<meta name="DC.creator" content="Baker, Maher Asaad">
 		<meta name="DC.subject" content="Scholarly Publishing; Open Access; Continuous Publication; Peer Review; Research Integrity; Interdisciplinary Research; Academic Communication; Call for Papers">
 		<meta name="DC.identifier" content="s2026781201">
@@ -100,40 +98,73 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "ScholarlyArticle",
-			"headline": "Advancing Open, Ethical, and Interdisciplinary Scholarship: Reflections on Volume One and a Call for Contributions to Volume Two (2026)",
-			"author": {
-				"@type": "Person",
-				"name": "Baker, Maher Asaad"
-			},
-			"datePublished": "2026-02-08",
-			"publisher": {
-				"@type": "Organization",
-				"name": "SOLAV Journal"
-			},
-			"sameAs": "https://solav.me/a/s2026781201",
-						"https://doi.org/10.5281/zenodo.18539901"
-		}
-		</script>
-		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "Periodical",
-			"name": "SOLAV Journal",
-			"url": "https://solav.me",
-			"publisher": {
-				"@type": "Organization",
-				"name": "Leothar Company"
-			},
-			"sameAs": [
-				"https://zenodo.org/communities/solav",
-				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
-				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
-			]
-		}
-		</script>
+{
+    "@context": "https://schema.org",
+    "@type": "ScholarlyArticle",
+    "@id": "https://solav.me/a/s2026781201",
+    "headline": "Advancing Open, Ethical, and Interdisciplinary Scholarship: Reflections on Volume One and a Call for Contributions to Volume Two (2026)",
+    "name": "Advancing Open, Ethical, and Interdisciplinary Scholarship: Reflections on Volume One and a Call for Contributions to Volume Two (2026)",
+    "url": "https://solav.me/a/s2026781201",
+    "identifier": [
+        {
+            "@type": "PropertyValue",
+            "propertyID": "InternalID",
+            "value": "s2026781201"
+        },
+        {
+            "@type": "PropertyValue",
+            "propertyID": "DOI",
+            "value": "10.5281/zenodo.18539901"
+        }
+    ],
+    "author": [
+        {
+            "@type": "Person",
+            "name": "Baker, Maher Asaad",
+            "givenName": "Maher Asaad",
+            "familyName": "Baker",
+            "affiliation": {
+                "@type": "Organization",
+                "name": "SOLAV, Riyadh, Saudi Arabia"
+            },
+            "sameAs": "https://orcid.org/0000-0001-8013-6044"
+        }
+    ],
+    "publisher": {
+        "@type": "Organization",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me"
+    },
+    "isPartOf": {
+        "@type": "Periodical",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me",
+        "issn": ""
+    },
+    "dateReceived": "2026-01-19",
+    "dateAccepted": "2026-01-20",
+    "datePublished": "2026-02-08",
+    "volumeNumber": "2",
+    "issueNumber": "",
+    "pagination": "1-6",
+    "inLanguage": "en",
+    "articleSection": "Editorial",
+    "abstract": "This editorial reflects on the achievements and lessons of SOLAV Journal’s inaugural volume and outlines the journal’s strategic priorities for 2026. It reaffirms the journal’s commitment to open access, rigorous peer review, and ethical publishing, and formally invites original scholarly contributions for Volume Two. Through this call for papers, the journal seeks to strengthen its role as a collaborative platform for innovative, socially relevant, and methodologically sound research.",
+    "keywords": [
+        "Scholarly Publishing",
+        "Open Access",
+        "Continuous Publication",
+        "Peer Review",
+        "Research Integrity",
+        "Interdisciplinary Research",
+        "Academic Communication",
+        "Call for Papers"
+    ],
+    "license": "CC BY 4.0",
+    "sameAs": [
+        "https://doi.org/10.5281/zenodo.18539901"
+    ]
+}		</script>
 	</head>
 	<body>
 		<main class="page-wrapper">
@@ -177,7 +208,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item"><span class="text-primary p-0 m-0 ps-2">●</span> Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -433,7 +464,7 @@
 						</div>
 					</div>
 					<div class="modal-footer border-0 justify-content-center pb-4">
-						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Journal for Interdisciplinary Applied Research</span>
+						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Scholarly Repository</span>
 					</div>
 				</div>
 			</div>
