--- a/a/s2026781202.html
+++ b/a/s2026781202.html
@@ -23,6 +23,13 @@
 		<meta name="citation_lastpage" content="12"/>
 		<meta name="citation_doi" content=""/>
 		<meta name="citation_abstract_html_url" content="https://solav.me/a/s2026781202"/>
+		<meta name="citation_publication_date" content="2026/02/08">
+		<meta name="citation_pdf_url" content="https://solav.me/p/s2026781202.pdf">
+		<meta name="citation_journal_title" content="SOLAV Journal">
+		<meta name="citation_issn" content="">
+		<meta name="citation_doi" content="">
+		<meta name="citation_abstract" content="This editorial examines the evolving intersection between responsible artificial intelligence and sustainable technologies, emphasizing the need for transparent, accountable, and human-centered AI systems in addressing complex sustainability problems. It outlines emerging research frontiers and identifies critical challenges in governance, ethics, and implementation. The article argues that interdisciplinary collaboration and strong ethical oversight are essential for ensuring that AI-driven innovation contributes positively to sustainable development.">
+		<meta name="citation_keywords" content="Responsible Artificial Intelligence; Sustainable Technologies; Ethical Computing; Environmental Monitoring; Energy Systems; AI Governance; Open Science; Interdisciplinary Research">
 		<meta name="citation_keywords" content="Responsible Artificial Intelligence"/>
 		<meta name="citation_keywords" content="Sustainable Technologies"/>
 		<meta name="citation_keywords" content="Ethical Computing"/>
@@ -76,15 +83,6 @@
 		<meta name="DC.Type" content="Text.Serial.Journal"/>
 		<meta name="DC.Date.created" scheme="ISO8601" content="2026-01-24"/>
 		<meta name="DC.Type.articleType" content="Editorial"/>
-		<meta name="citation_author" content="Baker, Maher Asaad">
-		<meta name="citation_publication_date" content="2026/02/08">
-		<meta name="citation_pdf_url" content="https://solav.me/p/s2026781202.pdf">
-		<meta name="citation_journal_title" content="SOLAV Journal">
-		<meta name="citation_issn" content="">
-		<meta name="citation_doi" content="">
-		<meta name="citation_abstract" content="This editorial examines the evolving intersection between responsible artificial intelligence and sustainable technologies, emphasizing the need for transparent, accountable, and human-centered AI systems in addressing complex sustainability problems. It outlines emerging research frontiers and identifies critical challenges in governance, ethics, and implementation. The article argues that interdisciplinary collaboration and strong ethical oversight are essential for ensuring that AI-driven innovation contributes positively to sustainable development.">
-		<meta name="citation_keywords" content="Responsible Artificial Intelligence; Sustainable Technologies; Ethical Computing; Environmental Monitoring; Energy Systems; AI Governance; Open Science; Interdisciplinary Research">
-		<meta name="DC.title" content="Responsible Artificial Intelligence and Sustainable Technologies: Emerging Research Frontiers">
 		<meta name="DC.creator" content="Baker, Maher Asaad">
 		<meta name="DC.subject" content="Responsible Artificial Intelligence; Sustainable Technologies; Ethical Computing; Environmental Monitoring; Energy Systems; AI Governance; Open Science; Interdisciplinary Research">
 		<meta name="DC.identifier" content="s2026781202">
@@ -112,40 +110,73 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "ScholarlyArticle",
-			"headline": "Responsible Artificial Intelligence and Sustainable Technologies: Emerging Research Frontiers",
-			"author": {
-				"@type": "Person",
-				"name": "Baker, Maher Asaad"
-			},
-			"datePublished": "2026-02-08",
-			"publisher": {
-				"@type": "Organization",
-				"name": "SOLAV Journal"
-			},
-			"sameAs": "https://solav.me/a/s2026781202",
-						"https://doi.org/10.5281/zenodo.18540225"
-		}
-		</script>
-		<script type="application/ld+json">
-		{
-			"@context": "https://schema.org",
-			"@type": "Periodical",
-			"name": "SOLAV Journal",
-			"url": "https://solav.me",
-			"publisher": {
-				"@type": "Organization",
-				"name": "Leothar Company"
-			},
-			"sameAs": [
-				"https://zenodo.org/communities/solav",
-				"https://commons.datacite.org/doi.org?query=SOLAV+Journal",
-				"https://explore.openaire.eu/search/find?fv0=solav%20journal&f0=q"
-			]
-		}
-		</script>
+{
+    "@context": "https://schema.org",
+    "@type": "ScholarlyArticle",
+    "@id": "https://solav.me/a/s2026781202",
+    "headline": "Responsible Artificial Intelligence and Sustainable Technologies: Emerging Research Frontiers",
+    "name": "Responsible Artificial Intelligence and Sustainable Technologies: Emerging Research Frontiers",
+    "url": "https://solav.me/a/s2026781202",
+    "identifier": [
+        {
+            "@type": "PropertyValue",
+            "propertyID": "InternalID",
+            "value": "s2026781202"
+        },
+        {
+            "@type": "PropertyValue",
+            "propertyID": "DOI",
+            "value": "10.5281/zenodo.18540225"
+        }
+    ],
+    "author": [
+        {
+            "@type": "Person",
+            "name": "Baker, Maher Asaad",
+            "givenName": "Maher Asaad",
+            "familyName": "Baker",
+            "affiliation": {
+                "@type": "Organization",
+                "name": "SOLAV, Riyadh, Saudi Arabia"
+            },
+            "sameAs": "https://orcid.org/0000-0001-8013-6044"
+        }
+    ],
+    "publisher": {
+        "@type": "Organization",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me"
+    },
+    "isPartOf": {
+        "@type": "Periodical",
+        "name": "SOLAV Journal",
+        "url": "https://solav.me",
+        "issn": ""
+    },
+    "dateReceived": "2026-01-24",
+    "dateAccepted": "2026-01-28",
+    "datePublished": "2026-02-08",
+    "volumeNumber": "2",
+    "issueNumber": "",
+    "pagination": "7-12",
+    "inLanguage": "en",
+    "articleSection": "Editorial",
+    "abstract": "This editorial examines the evolving intersection between responsible artificial intelligence and sustainable technologies, emphasizing the need for transparent, accountable, and human-centered AI systems in addressing complex sustainability problems. It outlines emerging research frontiers and identifies critical challenges in governance, ethics, and implementation. The article argues that interdisciplinary collaboration and strong ethical oversight are essential for ensuring that AI-driven innovation contributes positively to sustainable development.",
+    "keywords": [
+        "Responsible Artificial Intelligence",
+        "Sustainable Technologies",
+        "Ethical Computing",
+        "Environmental Monitoring",
+        "Energy Systems",
+        "AI Governance",
+        "Open Science",
+        "Interdisciplinary Research"
+    ],
+    "license": "CC BY 4.0",
+    "sameAs": [
+        "https://doi.org/10.5281/zenodo.18540225"
+    ]
+}		</script>
 	</head>
 	<body>
 		<main class="page-wrapper">
@@ -189,7 +220,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item"><span class="text-primary p-0 m-0 ps-2">●</span> Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Voulme 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -445,7 +476,7 @@
 						</div>
 					</div>
 					<div class="modal-footer border-0 justify-content-center pb-4">
-						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Journal for Interdisciplinary Applied Research</span>
+						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Scholarly Repository</span>
 					</div>
 				</div>
 			</div>
