--- a/accessibility.html
+++ b/accessibility.html
@@ -367,6 +367,9 @@
 							<div class="row mb-0 h-100 d-flex align-items-end justify-content-lg-end px-3">
 								<div class="col-12 p-0 m-0">
 									<div class="pb-1">
+										<a href="https://core.ac.uk/data-providers/25920" 
+										title="Indexed by CORE (COnnecting REpositories)" 
+										target="_blank"><img src="/images/core_icon.svg" class="d-Icons" alt="CORE indexed journal"></a>
 										<a href="https://search.worldcat.org/search?q=pb%3A%22SOLAV+Journal%22" 
 										title="Discoverable in WorldCat global library catalog" 
 										target="_blank"><img src="/images/worldcat_icon.svg" class="d-Icons" alt="WorldCat global library catalog"></a>
