--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 						<div class="pt-5 mt-md-5 centered-text w-100">
 							<div id="logoContainerP">
 								<div id="logoContainer">
-									<img class ="logoImg" src="/images/logo.svg">
+									<img class ="logoImg" src="/images/logo.svg" alt="SOLAV Journal">
 								</div>
 								<div class="circle">
 									<div class="pulse"></div>
@@ -450,7 +450,13 @@
 						</div>
 						
 						<div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 g-4 justify-content-center align-items-center">
-							
+							<div class="col text-center">
+								<a href="https://core.ac.uk/data-providers/25920" target="_blank" rel="noopener" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
+									<img src="/images/core_logo.svg" alt="CORE indexed journal" class="img-fluid" style="max-height: 60px;">
+									<span class="d-block fw-bold text-nav mt-2">CORE</span>
+									<small class="text-muted d-block" style="font-size: 0.7rem;">Data Provider</small>
+								</a>
+							</div>
 							<div class="col text-center">
 								<a href="https://search.worldcat.org/search?q=pb%3A%22SOLAV+Journal%22" target="_blank" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
 									<img src="/images/worldcat_logo.svg" alt="WorldCat" class="img-fluid">
@@ -772,6 +778,9 @@
 							<div class="row mb-0 h-100 d-flex align-items-end justify-content-lg-end px-3">
 								<div class="col-12 p-0 m-0">
 									<div class="pb-1">
+										<a href="https://core.ac.uk/data-providers/25920" 
+										title="Indexed by CORE (COnnecting REpositories)" 
+										target="_blank"><img src="/images/core_icon.svg" class="d-Icons" alt="CORE indexed journal"></a>
 										<a href="https://search.worldcat.org/search?q=pb%3A%22SOLAV+Journal%22" 
 										title="Discoverable in WorldCat global library catalog" 
 										target="_blank"><img src="/images/worldcat_icon.svg" class="d-Icons" alt="WorldCat global library catalog"></a>
