--- a/about.html
+++ b/about.html
@@ -327,8 +327,8 @@
 						<div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 g-4 justify-content-center align-items-center">
 							<div class="col text-center">
 								<a href="https://core.ac.uk/data-providers/25920" target="_blank" rel="noopener" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
-									<img src="/images/core_logo.svg" alt="CORE indexed journal" class="img-fluid" style="max-height: 60px;">
-									<span class="d-block fw-bold text-nav mt-2">CORE</span>
+									<img src="/images/core_logo.svg" alt="CORE indexed journal" class="img-fluid">
+									<span class="d-block fw-bold text-nav">CORE</span>
 									<small class="text-muted d-block" style="font-size: 0.7rem;">Data Provider</small>
 								</a>
 							</div>
@@ -361,6 +361,46 @@
 								</a>
 							</div>
 
+						</div>
+					</div>
+				</section>
+				<section class="container py-4">
+					<div class="card border-0 bg-secondary bg-opacity-50 p-4 p-md-5 rounded-2">
+						<div class="text-center mb-4 mb-md-5">
+							<h2 class="h2 mb-3">Metadata Preservation Infrastructure</h2>
+							<p class="mx-auto mb-0">
+								SOLAV maintains redundant preservation layers to ensure long-term accessibility of bibliographic metadata and scholarly context.
+							</p>
+						</div>
+						
+						<div class="row row-cols-1 row-cols-md-2 g-4">
+							<div class="col">
+								<div class="card h-100 border-0 shadow-sm">
+									<div class="card-body">
+										<h5 class="card-title d-flex align-items-center">
+										<img src="/images/zenodo-icon-blue.svg" alt="Zenodo logo" class="me-3" style="height: 32px;">
+											Primary Archiving (Zenodo)
+										</h5>
+										<p class="card-text">
+											All articles receive permanent DOIs and full-text preservation via <a href="https://zenodo.org/communities/solav" target="_blank" rel="noopener">Zenodo</a> (CERN), a CoreTrustSeal-certified repository. This serves as our official archival record with institutional-grade redundancy.
+										</p>
+									</div>
+								</div>
+							</div>
+							
+							<div class="col">
+								<div class="card h-100 border-0 shadow-sm">
+									<div class="card-body">
+										<h5 class="card-title d-flex align-items-center">
+										<img src="/images/osf-logo.svg" alt="OSF logo" class="me-3" style="height: 32px;">
+											Structured Metadata Preservation (OSF)
+										</h5>
+										<p class="card-text">
+											Machine-readable metadata records (Schema.org JSON-LD, Dublin Core XML, BibTeX, MARC21) are preserved in an <a href="https://osf.io/2yskf/" target="_blank" rel="noopener">OSF project</a> as a supplementary preservation layer. This enhances interoperability with library systems and reference managers while providing redundant backup of bibliographic information.
+										</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
