--- a/archiving.html
+++ b/archiving.html
@@ -284,6 +284,46 @@
 										</div>
 									</div>
 								</div>
+
+					<div class="card border-0">
+						<div class="text-center mb-4 mb-md-5">
+							<h2 class="h2 mb-3">Metadata Preservation Infrastructure</h2>
+							<p class="mx-auto mb-0">
+								SOLAV maintains redundant preservation layers to ensure long-term accessibility of bibliographic metadata and scholarly context.
+							</p>
+						</div>
+						
+						<div class="row row-cols-1 row-cols-md-2 g-4">
+							<div class="col">
+								<div class="card h-100 border-0 shadow-sm">
+									<div class="card-body">
+										<h5 class="card-title d-flex align-items-center">
+										<img src="/images/zenodo-icon-blue.svg" alt="Zenodo logo" class="me-3" style="height: 32px;">
+											Primary Archiving (Zenodo)
+										</h5>
+										<p class="card-text">
+											All articles receive permanent DOIs and full-text preservation via <a href="https://zenodo.org/communities/solav" target="_blank" rel="noopener">Zenodo</a> (CERN), a CoreTrustSeal-certified repository. This serves as our official archival record with institutional-grade redundancy.
+										</p>
+									</div>
+								</div>
+							</div>
+							
+							<div class="col">
+								<div class="card h-100 border-0 shadow-sm">
+									<div class="card-body">
+										<h5 class="card-title d-flex align-items-center">
+										<img src="/images/osf-logo.svg" alt="OSF logo" class="me-3" style="height: 32px;">
+											Structured Metadata Preservation (OSF)
+										</h5>
+										<p class="card-text">
+											Machine-readable metadata records (Schema.org JSON-LD, Dublin Core XML, BibTeX, MARC21) are preserved in an <a href="https://osf.io/2yskf/" target="_blank" rel="noopener">OSF project</a> as a supplementary preservation layer. This enhances interoperability with library systems and reference managers while providing redundant backup of bibliographic information.
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
 								<div class="col-md-6 col-lg-4">
 									<div class="card h-100 bg-light shadow-lg rounded-3 border border-opacity-10">
 										<div class="card-body text-center p-4">
