--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
 						<div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 g-4 justify-content-center align-items-center">
 							<div class="col text-center">
 								<a href="https://core.ac.uk/data-providers/25920" target="_blank" rel="noopener" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
-									<img src="/images/core_logo.svg" alt="CORE indexed journal" class="img-fluid" style="max-height: 60px;">
-									<span class="d-block fw-bold text-nav mt-2">CORE</span>
+									<img src="/images/core_logo.svg" alt="CORE indexed journal" class="img-fluid">
+									<span class="d-block fw-bold text-nav">CORE</span>
 									<small class="text-muted d-block" style="font-size: 0.7rem;">Data Provider</small>
 								</a>
 							</div>
