--- a/about.html
+++ b/about.html
@@ -322,35 +322,35 @@
 						<div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 g-4 justify-content-center align-items-center">
 							<div class="col text-center">
 								<a href="https://core.ac.uk/data-providers/25920" target="_blank" rel="noopener" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
-									<img src="/images/core_logo.svg" alt="CORE indexed journal" class="img-fluid">
+									<div class="rounded-2 bg-white p-2"><img src="/images/core_logo.svg" alt="CORE indexed journal" class="img-fluid"></div>
 									<span class="d-block fw-bold text-nav">CORE</span>
 									<small class="text-muted d-block" style="font-size: 0.7rem;">Data Provider</small>
 								</a>
 							</div>
 							<div class="col text-center">
 								<a href="https://search.worldcat.org/search?q=pb%3A%22SOLAV+Journal%22" target="_blank" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
-									<img src="/images/worldcat_logo.svg" alt="WorldCat" class="img-fluid">
+									<div class="rounded-2 bg-white p-2"><img src="/images/worldcat_logo.svg" alt="WorldCat" class="img-fluid"></div>
 									<span class="d-block fw-bold text-nav">WorldCat</span>
 									<small class="text-muted d-block" style="font-size: 0.7rem;">OCLC Network</small>
 								</a>
 							</div>
 							<div class="col text-center">
 								<a href="https://scholar.google.com/scholar?q=%22SOLAV+Journal%22" target="_blank" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
-									<img src="/images/google_scholar_logo.svg" alt="Google Scholar" class="img-fluid">
+									<div class="rounded-2 bg-white p-2"><img src="/images/google_scholar_logo.svg" alt="Google Scholar" class="img-fluid"></div>
 									<span class="d-block fw-bold text-nav">Google Scholar</span>
 									<small class="text-muted d-block" style="font-size: 0.7rem;">Discoverable</small>
 								</a>
 							</div>
 							<div class="col text-center">
 								<a href="https://openalex.org/works?page=1&filter=title_and_abstract.search:solav+journal" target="_blank" rel="noopener" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
-									<img src="/images/openalex_logo.svg" alt="SOLAV Journal in OpenAlex scholarly database" class="img-fluid">
+									<div class="rounded-2 bg-white p-2"><img src="/images/openalex_logo.svg" alt="SOLAV Journal in OpenAlex scholarly database" class="img-fluid"></div>
 									<span class="d-block fw-bold text-nav">OpenAlex</span>
 									<small class="text-muted d-block" style="font-size: 0.7rem;">Scholarly Database</small>
 								</a>
 							</div>
 							<div class="col text-center">
 								<a href="/oai-pmh" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
-									<img src="/images/solav_metadata_logo.svg" alt="SOLAV Metadata" class="img-fluid">
+									<div class="rounded-2 bg-white p-2"><img src="/images/solav_metadata_logo.svg" alt="SOLAV Metadata" class="img-fluid"></div>
 									<span class="d-block fw-bold text-nav">OAI-PMH</span>
 									<small class="text-muted d-block" style="font-size: 0.7rem;">Metadata Feed</small>
 								</a>
