--- a/ethics.html
+++ b/ethics.html
@@ -28,7 +28,7 @@
 		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<link href="/css/swiper.css" rel="stylesheet">
-		<link href="/css/style.css?v=20260222" rel="stylesheet">
+		<link href="/css/style.css?v=20260223" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 		<script>
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches,n=e||(t?"dark":"light");document.documentElement.setAttribute("data-bs-theme",n),"undefined"!=typeof document&&document.addEventListener("DOMContentLoaded",(function(){const e=document.getElementById("theme-mode");e&&(e.checked="dark"===n,e.addEventListener("change",(function(){const e=this.checked?"dark":"light";document.documentElement.setAttribute("data-bs-theme",e),localStorage.setItem("theme",e)})))}))}();
@@ -294,7 +294,7 @@
 										</div>
 									</div>
 									
-									<div class="col-md-6">
+									<div class="col-md-6" id="misconduct">
 										<div class="card h-100 border border-opacity-10">
 											<div class="card-body">
 												<h5 class="card-title text-primary mb-3">
@@ -454,7 +454,7 @@
 							</div>
 						</section>
 
-						<section class="mb-5">
+						<section class="mb-5" id="misconduct">
 							<h2 class="h1 mb-4">Handling Misconduct & Concerns</h2>
 							
 							<div class="card bg-light shadow-lg rounded-3 border border-opacity-10">
@@ -490,6 +490,10 @@
 									<div class="alert alert-warning mt-4" role="alert">
 										<h5 class="alert-heading"><i class="bi bi-lightbulb me-2"></i>Good Faith Reporting</h5>
 										<p class="mb-0">We encourage reporting of suspected misconduct. Reporters acting in good faith will not face retaliation, even if allegations are unproven. Malicious or false reports, however, are themselves a form of misconduct.</p>
+									</div>
+
+									<div class="row mt-5">
+										<div id="knowledge-check-ethics"></div>
 									</div>
 								</div>
 							</div>
@@ -724,7 +728,7 @@
 	
 		<script src="/js/jarallax.js"></script>
 		<script src="/js/swiper.js"></script>
-		<script src="/js/js.js?v=20260222"></script>
+		<script src="/js/js.js?v=20260223"></script>
 		<script>
 			document.querySelectorAll('.mobile-nav-link').forEach(function(link) { link.addEventListener('click', function() { document.querySelectorAll('.offcanvas.show').forEach(function(el) { const instance = bootstrap.Offcanvas.getInstance(el); if (instance) { instance.hide(); } }); }); });
 			document.getElementById('currentYear').textContent = new Date().getFullYear();
